--- a/heroku.yml
+++ b/heroku.yml
@@ -1,3 +1,8 @@
 build:
   docker:
     web: Dockerfile
+  config:
+    APP_ENV: production
+    MAMBU_DATABASE: <%= ENV["MONGO_DATABASE"] %>
+    MAMBU_USER: <%= ENV["MAMBU_USER"] %>
+    MAMBU_PASSWORD: <%= ENV["MAMBU_PASSWORD"] %>
