Conexión por variables de entorno

--- a/variables.example
+++ b/variables.example
@@ -1,4 +1,4 @@
-MONGO_DATABASE=vulcano
-MONGO_USER=spock
-MONGO_SRV=cluster0-uwcs4.mongodb.net
-MONGO_PASSWORD=NSaHRQpoojcFIDqj
+MONGO_DATABASE=
+MONGO_USER=
+MONGO_SRV=
+MONGO_PASSWORD=
