--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ jdk:
   - openjdk8
 services:
   - docker
+before_install:
+  - docker build -t pronostico-loco --build-arg MONGO_DATABASE=$MONGO_DATABASE --build-arg MONGO_USER=$MONGO_USER --build-arg MONGO_SRV=$MONGO_SRV --build-arg MONGO_PASSWORD=$MONGO_PASSWORD .
 branches:
   only:
     - master
