--- a/heroku.yml
+++ b/heroku.yml
@@ -3,7 +3,7 @@ build:
     web: Dockerfile
   config:
     APP_ENV: production
-    MAMBU_DATABASE: ${MONGO_DATABASE}
-    MAMBU_USER: ${MAMBU_USER}
-    MAMBU_PASSWORD: ${MAMBU_PASSWORD}
-    MAMBU_SRV: ${MAMBU_SRV}
+    MONGO_DATABASE: ${MONGO_DATABASE}
+    MONGO_USER: ${MONGO_USER}
+    MONGO_PASSWORD: ${MONGO_PASSWORD}
+    MONGO_SRV: ${MONGO_SRV}
