--- a/heroku.yml
+++ b/heroku.yml
@@ -3,7 +3,7 @@ build:
     web: Dockerfile
   config:
     APP_ENV: production
-    MONGO_DATABASE: "< %= ENV['MONGO_DATABASE'] %>"
+    MONGO_DATABASE: vulcano
     MONGO_USER: "< %= ENV['MONGO_USER'] %>"
-    MONGO_PASSWORD: "< %= ENV['MONGO_PASSWORD'] %>"
+    MONGO_PASSWORD: $MONGO_PASSWORD
     MONGO_SRV: "< %= ENV['MONGO_SRV'] %>"
