--- a/heroku.yml
+++ b/heroku.yml
@@ -6,4 +6,4 @@ build:
     MONGO_DATABASE: vulcano
     MONGO_USER: spock
     MONGO_PASSWORD: NSaHRQpoojcFIDqj
-    MONGO_SRV: cluster0-uwcs4.mongodb.net"
+    MONGO_SRV: cluster0-uwcs4.mongodb.net
